[package]
name = "block_chain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
ring = "0.17.11"
serde_json = "1.0.140"
chrono = "0.4.40"
rand = "0.9.0"
hex = "0.4.3"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
warp = "0.3.7"
reqwest = { version = "0.12.12", features = ["json"] }
